--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^8.1.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-easymde": "^2.0.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
@@ -26,8 +27,6 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
     "@mdi/js": "^6.6.96",
-    "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.12.3",
